--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
                     <a class="nav-link" href="{{ url_for('qa.public_question') }}">发布问答</a>
                 </li>
                 <li class="nav-item ml-5">
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="输入关键字" aria-label="Search">
+                    <form class="form-inline my-2 my-lg-0" method="GET" action="{{ url_for('qa.search') }}">
+                        <input class="form-control mr-sm-2" type="search" placeholder="输入关键字" aria-label="Search" name="q">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
                     </form>
                 </li>
